<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/entry_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:fontFamily="@font/abril_fatface"
            android:letterSpacing="0.2"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textSize="28dp"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/treasure_map" />

        <TextView
            android:id="@+id/login_error_messages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textSize="15dp"
            android:visibility="gone" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_email_error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="39dp"
                android:background="@android:color/transparent"
                android:hint="@string/email_str"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password_error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:background="@android:color/transparent"
                android:hint="@string/password_str"
                android:inputType="textPassword"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/login_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginTop="5dp"
            android:text="@string/forgot_password_str" />


        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="35dp"
            android:text="@string/login_str"
            android:fontFamily="monospace"
            android:textAllCaps="false"
            android:textSize="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account_str"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/login_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUp_str"
            android:textSize="16dp"
            android:paddingLeft="5dp" />
    </LinearLayout>

</RelativeLayout>